Fix BHGAP header

--- a/web/themes/custom/bglobal/source/_patterns/atoms/base/_main.scss
+++ b/web/themes/custom/bglobal/source/_patterns/atoms/base/_main.scss
@@ -23,7 +23,7 @@ body {
   background-color: $teal;
   h2, h3, h4, h5, 
   .h2, .h3, .h4, .h5,
-  p, span {
+  p, span, label {
     color: white;
   }
   a {
