--- a/web/themes/custom/bglobal/source/_patterns/molecules/nav-main/_nav-haas.scss
+++ b/web/themes/custom/bglobal/source/_patterns/molecules/nav-main/_nav-haas.scss
@@ -1,4 +1,4 @@
-#block-haasmainmenu {
+.menu--haas-main-menu {
   a,
   li {
     color: $white;
