--- a/web/themes/custom/bglobal/source/_patterns/organisms/header/_header.scss
+++ b/web/themes/custom/bglobal/source/_patterns/organisms/header/_header.scss
@@ -77,6 +77,7 @@
 
 .haas {
   .navbar {
-    background-color: $berkeley-blue;
+    border-top: 0px;
+    background-color: $haas-blue;
   }
 }
