--- a/web/themes/custom/bglobal/source/css/scss/helpers/_variables.scss
+++ b/web/themes/custom/bglobal/source/css/scss/helpers/_variables.scss
@@ -19,6 +19,9 @@ $founders-rock: #3B7EA1;
 $california-gold: #FDB515;
 $medalist: #C4820E;
 
+$haas-blue: #15294b;
+
+
 // Berkeley Secondary Palettes
 $wellman-tile: #D9661F;
 $rose-garden: #EE1F60;
